--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -3023,20 +3023,20 @@ kg
                         "comments_love_max": "年が明けても､変化はない｡強いて言えば…OOと此処に来て､覚悟しただけさ｡共に新たな壮途に就くことをね"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2452701/ba025ff9870e8cb3538775bb1fea2547.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2452701/1e1c15ce9294dae8e082edec085e919c.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2452701/1d0ad43c4c366fb58548ccaf09ad3702.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2452701/c5682eb4dca1d88e299437699b552d27.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2452701/16f195b2892a2cd62e98cc06adf5aa96.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2452701/41fb37052cb999575d9917c625d3aa23.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2452701/0f2d9cc3c9ee1b9f62a338de3d9bf4b1.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2452701/96527c8135113c5d88b871571b59e576.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2452701/dccd7b62de3147b5c07ef576391f2705.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2452701/9a90e2f3bebc78af135cd3416ee70e99.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2452701/60fa916939896001b8a5f2c95f9c3d90.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2452701/2d35404775a5b0778de51c810f2b726d.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2452701/59b1641c2f0e1db401d20ca40a8f4b50.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2452701/9d48fb9d2429e7a31d4dc8c88aef471a.mp4"
+                        "comment": "../../sound/2452701/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2452701/my_1.mp3",
+                        "comments_my_2": "../../sound/2452701/my_2.mp3",
+                        "comments_my_3": "../../sound/2452701/my_3.mp3",
+                        "comments_my_4": "../../sound/2452701/my_4.mp3",
+                        "comments_my_max": "../../sound/2452701/my_max.mp3",
+                        "comments_work_1": "../../sound/2452701/work_1.mp3",
+                        "comments_work_2": "../../sound/2452701/work_2.mp3",
+                        "comments_work_3": "../../sound/2452701/work_3.mp3",
+                        "comments_work_4": "../../sound/2452701/work_4.mp3",
+                        "comments_work_max": "../../sound/2452701/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2452701/work_love_up.mp3",
+                        "comments_live": "../../sound/2452701/live.mp3",
+                        "comments_love_max": "../../sound/2452701/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3102,20 +3102,20 @@ kg
                         "comments_love_max": "いずれ雪は溶け､花は散る｡永遠は存在しない｡だからこそ､ﾎﾞｸは舞おう｡OOの中に､長くこの姿を留められるように"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2552702/ce0b6ad9a43cd544b4500068b131fc38.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2552702/e664c992e420def7e2913ae812efca2f.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2552702/6f84ed335463b63b467eb83c3b653adc.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2552702/d18989b5b20de845d52b39add5ce1fa7.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2552702/ff463cbe7bafb71390da55fbe1513d80.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2552702/ab22891221f6731320f2bb417df94ede.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2552702/1c97b6fe0c5ee1900674d550b7982514.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2552702/61202acc85e42e0fa38742d8cc622273.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2552702/aee8763d14b2d15dcb73351a95982eb3.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2552702/80646dfdce98b51649000082b877219b.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2552702/67d615609909f655db92c91d3026e7c5.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2552702/0ad0008c0b606b87fd120dc9ea2115e6.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2552702/8b648f80b8aee34a4649ecc6daeaf4c9.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2552702/ba96706d1984936573986de07e28a54e.mp4"
+                        "comment": "../../sound/2552702/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2552702/my_1.mp3",
+                        "comments_my_2": "../../sound/2552702/my_2.mp3",
+                        "comments_my_3": "../../sound/2552702/my_3.mp3",
+                        "comments_my_4": "../../sound/2552702/my_4.mp3",
+                        "comments_my_max": "../../sound/2552702/my_max.mp3",
+                        "comments_work_1": "../../sound/2552702/work_1.mp3",
+                        "comments_work_2": "../../sound/2552702/work_2.mp3",
+                        "comments_work_3": "../../sound/2552702/work_3.mp3",
+                        "comments_work_4": "../../sound/2552702/work_4.mp3",
+                        "comments_work_max": "../../sound/2552702/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2552702/work_love_up.mp3",
+                        "comments_live": "../../sound/2552702/live.mp3",
+                        "comments_love_max": "../../sound/2552702/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
