--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -3181,20 +3181,20 @@ kg
                         "comments_love_max": "その身ひとつでは輝けない｡それはﾎﾞｸも同じさ｡故に､求め続けているのかも｡月は太陽を､ﾎﾞｸはOO…ｷﾐという光を"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2456101/c99b7ae9f3c0416d1c4b18653fac7e76.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2456101/4a34234bf8cd1e54db787ab270b2d16f.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2456101/2b09b69e66b2e940ccbc7008406a05a9.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2456101/7b1a3153e590d5b7b85041281035cadb.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2456101/0234d9fd56a64af3ff4d3417c3e5a130.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2456101/f898e9cc309745b59db740c2e5de518f.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2456101/fc140d3248788cc941e730816a89fe57.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2456101/b042f427dca5784a532fea0c35edeb2e.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2456101/859512077ed5a675f2f26d8a4f4042a6.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2456101/f4dec2a7732d6ce50f64801969d8b686.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2456101/0589ce2274eb04c55d602d13e0add67b.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2456101/5870da506b94e0f37d9b3752f0871e4f.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2456101/45e5e863979d227bc6acb5d6f5df49a9.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2456101/7d6d243d4c23a959b214112101c83907.mp4"
+                        "comment": "../../sound/2456101/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2456101/my_1.mp3",
+                        "comments_my_2": "../../sound/2456101/my_2.mp3",
+                        "comments_my_3": "../../sound/2456101/my_3.mp3",
+                        "comments_my_4": "../../sound/2456101/my_4.mp3",
+                        "comments_my_max": "../../sound/2456101/my_max.mp3",
+                        "comments_work_1": "../../sound/2456101/work_1.mp3",
+                        "comments_work_2": "../../sound/2456101/work_2.mp3",
+                        "comments_work_3": "../../sound/2456101/work_3.mp3",
+                        "comments_work_4": "../../sound/2456101/work_4.mp3",
+                        "comments_work_max": "../../sound/2456101/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2456101/work_love_up.mp3",
+                        "comments_live": "../../sound/2456101/live.mp3",
+                        "comments_love_max": "../../sound/2456101/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3260,20 +3260,20 @@ kg
                         "comments_love_max": "不思議と､迷いはないんだ｡ﾎﾞｸは…柄にもなく期待しているのかもしれない｡OOと新しく創るｾｶｲ…その幕開けを…!"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2556102/81c603f33756676bb90218d12a9cfed5.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2556102/c31d6eec3c6775299053a51ceddd9a93.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2556102/e90b7d018b1079f4ee574711c6fed2ee.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2556102/0aa46f22702bf85b0a36fbfebe85aa20.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2556102/659051a782d793a3017504ce5cc93949.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2556102/5df845acc9450b624f948078c563d301.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2556102/d9b7a4d6bdabe71315a19ea7ab9cea42.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2556102/debe95bc6eefa4d8e90bd1653e2f2560.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2556102/7f03c9c9ceedf1ca3f1ba496c121fac8.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2556102/51abc910056416aa20916a3bc2296cfe.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2556102/2b380fa4954045b1847cb9e69da8a377.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2556102/dbc805e9a08d27776eff539ce4cdde04.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2556102/906d841a4139ab4051c73dc96015e0d1.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2556102/4a16761905b118b346c935872f8638da.mp4"
+                        "comment": "../../sound/2556102/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2556102/my_1.mp3",
+                        "comments_my_2": "../../sound/2556102/my_2.mp3",
+                        "comments_my_3": "../../sound/2556102/my_3.mp3",
+                        "comments_my_4": "../../sound/2556102/my_4.mp3",
+                        "comments_my_max": "../../sound/2556102/my_max.mp3",
+                        "comments_work_1": "../../sound/2556102/work_1.mp3",
+                        "comments_work_2": "../../sound/2556102/work_2.mp3",
+                        "comments_work_3": "../../sound/2556102/work_3.mp3",
+                        "comments_work_4": "../../sound/2556102/work_4.mp3",
+                        "comments_work_max": "../../sound/2556102/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2556102/work_love_up.mp3",
+                        "comments_live": "../../sound/2556102/live.mp3",
+                        "comments_love_max": "../../sound/2556102/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
