--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -3339,20 +3339,20 @@ kg
                         "comments_love_max": "かつてのﾎﾞｸは､見えない翼を広げ…雑踏をもがくだけだった｡けれど､それ故に巡り合えたのさ｡OOというｷｾｷにね"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2460001/0b41d3f7f196953e7c59aa447cfa9998.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2460001/16f6bc12d97b259409b57fe539571378.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2460001/ba4e902b36bfc139c1e2f68561b79478.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2460001/dc1eccd583d6bcc6de7813f50113c17e.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2460001/9ea2f0a0d313df1a74b8255f7eed0f1f.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2460001/14ff285e01ec35d33bc0ed3d435dd11b.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2460001/59362d39e57383150917d3410971f080.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2460001/c6141506e45f5ab778feabbce75bb8e8.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2460001/0c80df59b331369d01160e4cc3a52e75.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2460001/6f39704795c42f5aaa4800e92848f969.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2460001/8186a03fc7169a1abb3aa7889d688593.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2460001/36881613ca1bd8883143034fd739b0a0.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2460001/69d254f51780734755d2d2692d63460d.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2460001/a76dfd4d82fdfb04e9a8675bd373aac0.mp4"
+                        "comment": "../../sound/2460001/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2460001/my_1.mp3",
+                        "comments_my_2": "../../sound/2460001/my_2.mp3",
+                        "comments_my_3": "../../sound/2460001/my_3.mp3",
+                        "comments_my_4": "../../sound/2460001/my_4.mp3",
+                        "comments_my_max": "../../sound/2460001/my_max.mp3",
+                        "comments_work_1": "../../sound/2460001/work_1.mp3",
+                        "comments_work_2": "../../sound/2460001/work_2.mp3",
+                        "comments_work_3": "../../sound/2460001/work_3.mp3",
+                        "comments_work_4": "../../sound/2460001/work_4.mp3",
+                        "comments_work_max": "../../sound/2460001/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2460001/work_love_up.mp3",
+                        "comments_live": "../../sound/2460001/live.mp3",
+                        "comments_love_max": "../../sound/2460001/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3419,20 +3419,20 @@ kg
                         "comments_love_max": "無骨な舞台に､ｶﾞﾗｸﾀのﾎﾞｸ｡それだけじゃ､味気がない｡最後に彩りを与えてくれるのは､いつだってOOの存在なのさ"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2560002/3323d0b6c870d23239955cd2a6f2e796.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2560002/74c1df0f8b6c59d2640d4776a0233710.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2560002/90ab7cc08f85e4d1e555e3aa6461b712.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2560002/85d0bf189b73be2d4d7957f20b53865c.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2560002/7ed73e31fc093ddc33aa41eaddce4b84.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2560002/4fdf7801863d9a4d5b85b5e657d315bf.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2560002/a743c8012b5dcc8504c7ae01700ddbdb.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2560002/0f0221d9a59cf28f4867c7072fba86c9.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2560002/dea9f40f673f660ef0999b29e0ed734b.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2560002/7a9d7ccc0adc5efdbba33915a2b02ee6.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2560002/c2861053fe9aac17740e79f0b97c8db8.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2560002/93a480e8bd584354e7f85309fab1d142.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2560002/52e070c09529d8d9e652ddf621da54b8.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2560002/4a5f16f52b836a34f7685abe6cd3b04d.mp4"
+                        "comment": "../../sound/2560002/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2560002/my_1.mp3",
+                        "comments_my_2": "../../sound/2560002/my_2.mp3",
+                        "comments_my_3": "../../sound/2560002/my_3.mp3",
+                        "comments_my_4": "../../sound/2560002/my_4.mp3",
+                        "comments_my_max": "../../sound/2560002/my_max.mp3",
+                        "comments_work_1": "../../sound/2560002/work_1.mp3",
+                        "comments_work_2": "../../sound/2560002/work_2.mp3",
+                        "comments_work_3": "../../sound/2560002/work_3.mp3",
+                        "comments_work_4": "../../sound/2560002/work_4.mp3",
+                        "comments_work_max": "../../sound/2560002/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2560002/work_love_up.mp3",
+                        "comments_live": "../../sound/2560002/live.mp3",
+                        "comments_love_max": "../../sound/2560002/love_max.mp3"
                     },
                     "event": {
                         "1426": {
