--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -3504,20 +3504,20 @@ kg
                         "comments_love_max": "おかしいね｡ﾎﾞｸも物語に感化されたかな｡聖なる夜に､OOへ何を贈ろうかと考えているんだ｡とんだﾛﾏﾝﾁｽﾄだよ"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2464501/2aad4c29a036100ea8f575278b4f2281.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2464501/ad2c273337248282311b4c6f0e4996c5.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2464501/9134d310dae328a41631b458d1f305c1.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2464501/30185f5025d74f1e3607a55f5e58e070.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2464501/51699af419336f03a3db2ff6fc60f3cc.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2464501/87d7eb5538a1b5725ec26f04c2134aed.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2464501/3c8b8ba12ab521bbc94177db7946f057.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2464501/b5a8ccff8c05176a35eefbd819aaee5d.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2464501/e50a7cde6150cdf67e7f5c66ac857066.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2464501/ffd3d2ac6241164af9f0546089dbb564.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2464501/5567dc8a881700004d548ab923b11fde.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2464501/3e31db93bb8bc2de702b354e0909651b.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2464501/c612358271da54cb692b57efa489c268.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2464501/4ff3ef587f156aea8d97fcbfd2fcb6db.mp4"
+                        "comment": "../../sound/2464501/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2464501/my_1.mp3",
+                        "comments_my_2": "../../sound/2464501/my_2.mp3",
+                        "comments_my_3": "../../sound/2464501/my_3.mp3",
+                        "comments_my_4": "../../sound/2464501/my_4.mp3",
+                        "comments_my_max": "../../sound/2464501/my_max.mp3",
+                        "comments_work_1": "../../sound/2464501/work_1.mp3",
+                        "comments_work_2": "../../sound/2464501/work_2.mp3",
+                        "comments_work_3": "../../sound/2464501/work_3.mp3",
+                        "comments_work_4": "../../sound/2464501/work_4.mp3",
+                        "comments_work_max": "../../sound/2464501/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2464501/work_love_up.mp3",
+                        "comments_live": "../../sound/2464501/live.mp3",
+                        "comments_love_max": "../../sound/2464501/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3584,20 +3584,20 @@ kg
                         "comments_love_max": "別れと喪失はｲｺｰﾙじゃない｡ｱｽｶの仮面を外しても…OOの心に残り続けるのなら､演じたﾎﾞｸの想いも少しは報われる"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2564502/0a10c1a2129e052aa1598e653ea94ac7.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2564502/c6092dd87a6b46073b000ccddd0e5aea.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2564502/dc08de2533ec17ffcde7bd54b5ca397d.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2564502/cab739f87fa40de8e570f5e5518578a0.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2564502/d6b18c1197f7bb47e0bf5c751402ad68.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2564502/0c4e78b2e4c98db6f255bb5dc503ab4c.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2564502/3110ee09ff379454d15eb28d4341a26c.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2564502/ec3163e10d579a2ed07c9633271ea252.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2564502/8ea459b433f3fad8c72225b18cfb98ed.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2564502/7181646c4d64eb7c9a2019453bd82c31.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2564502/3143f13dd867ec1be3346f3fb4640870.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2564502/98fc6447314347cc7aca7f0cfc4ee987.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2564502/3971f6d206535f5d90fe2c26fc191078.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2564502/c9a2541273d86eab05ca03daa32c7067.mp4"
+                        "comment": "../../sound/2564502/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2564502/my_1.mp3",
+                        "comments_my_2": "../../sound/2564502/my_2.mp3",
+                        "comments_my_3": "../../sound/2564502/my_3.mp3",
+                        "comments_my_4": "../../sound/2564502/my_4.mp3",
+                        "comments_my_max": "../../sound/2564502/my_max.mp3",
+                        "comments_work_1": "../../sound/2564502/work_1.mp3",
+                        "comments_work_2": "../../sound/2564502/work_2.mp3",
+                        "comments_work_3": "../../sound/2564502/work_3.mp3",
+                        "comments_work_4": "../../sound/2564502/work_4.mp3",
+                        "comments_work_max": "../../sound/2564502/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2564502/work_love_up.mp3",
+                        "comments_live": "../../sound/2564502/live.mp3",
+                        "comments_love_max": "../../sound/2564502/love_max.mp3"
                     },
                     "event": {
                         "1930": {
