--- a/idol_gallery/idol_detail/asuka.html
+++ b/idol_gallery/idol_detail/asuka.html
@@ -3669,20 +3669,20 @@ kg
                         "comments_love_max": "ﾁｮｺもｱｲﾄﾞﾙも､本質は変わらないものだよ｡甘味と苦味の内包｡それを､OOとﾎﾞｸは味わい尽くす｡まったく…罪な味だ"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2464901/2a95f13a1ad098ebfd11cc5879d2d613.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2464901/a57ce865035e321c6b4ce42a626afac6.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2464901/51c9aae5f5d76468f8bd59910452afbc.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2464901/884992766283972565ad479a22dff083.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2464901/7b5c3d50b892749331b41186ca82b903.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2464901/a3ee1203dda20311ab639eb71019777c.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2464901/eeb32b6ac9e6405a050121907d2e5678.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2464901/d6660205c71bbcc4690a43dbbc66c20c.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2464901/b768aaa4e56648c7531c7aea3cc6097f.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2464901/f253b38cef16c592624cdecb7732df71.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2464901/15526650eead8347cab354a1f5ae77c6.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2464901/908fd25c83df0bb2b6b1657a00f2a3fb.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2464901/c65c231677b7f8fca51eafc06c642c3c.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2464901/19be59f718f817fb2cf72f137fd620f9.mp4"
+                        "comment": "../../sound/2464901/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2464901/my_1.mp3",
+                        "comments_my_2": "../../sound/2464901/my_2.mp3",
+                        "comments_my_3": "../../sound/2464901/my_3.mp3",
+                        "comments_my_4": "../../sound/2464901/my_4.mp3",
+                        "comments_my_max": "../../sound/2464901/my_max.mp3",
+                        "comments_work_1": "../../sound/2464901/work_1.mp3",
+                        "comments_work_2": "../../sound/2464901/work_2.mp3",
+                        "comments_work_3": "../../sound/2464901/work_3.mp3",
+                        "comments_work_4": "../../sound/2464901/work_4.mp3",
+                        "comments_work_max": "../../sound/2464901/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2464901/work_love_up.mp3",
+                        "comments_live": "../../sound/2464901/live.mp3",
+                        "comments_love_max": "../../sound/2464901/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
@@ -3749,20 +3749,20 @@ kg
                         "comments_love_max": "ﾎﾞｸが口にしたのは､祈りでも願いでもなく､確信さ｡OOのﾌﾟﾛﾃﾞｭｰｽで､ﾎﾞｸは何度でも､今日の愛し子に逢いに来るよ"
                     },
                     "voice": {
-                        "comment": "http://resource.mobamas.net/idolmaster/sound/2564902/2550200c727d557111d93aa4bfb39796.mp4",
-                        "comments_my_1": "http://resource.mobamas.net/idolmaster/sound/2564902/4ba275acd898eb4ffdeb6073d881648e.mp4",
-                        "comments_my_2": "http://resource.mobamas.net/idolmaster/sound/2564902/f614d7e9e3ff43126950d1b186b66010.mp4",
-                        "comments_my_3": "http://resource.mobamas.net/idolmaster/sound/2564902/862ba10436964714e86bbeaa18fd1f8f.mp4",
-                        "comments_my_4": "http://resource.mobamas.net/idolmaster/sound/2564902/6206bae11316194b807c07aa738d48df.mp4",
-                        "comments_my_max": "http://resource.mobamas.net/idolmaster/sound/2564902/8916d3c48b2d5557d155730ed3309bf0.mp4",
-                        "comments_work_1": "http://resource.mobamas.net/idolmaster/sound/2564902/1620966f14a8ec186478169934d8ce38.mp4",
-                        "comments_work_2": "http://resource.mobamas.net/idolmaster/sound/2564902/1aa5475c7319c25fa9afeef0db94de79.mp4",
-                        "comments_work_3": "http://resource.mobamas.net/idolmaster/sound/2564902/cd24b4528267ed1a04cb88359ea7fdd2.mp4",
-                        "comments_work_4": "http://resource.mobamas.net/idolmaster/sound/2564902/997a11506cf0ac38efe6c00347c9f244.mp4",
-                        "comments_work_max": "http://resource.mobamas.net/idolmaster/sound/2564902/4384202898ad3501419a8e83c63264d4.mp4",
-                        "comments_work_love_up": "http://resource.mobamas.net/idolmaster/sound/2564902/5172562200c17603084dcd95b2cc794d.mp4",
-                        "comments_live": "http://resource.mobamas.net/idolmaster/sound/2564902/fa17d337bc4e9267fe01c3a19871f5e8.mp4",
-                        "comments_love_max": "http://resource.mobamas.net/idolmaster/sound/2564902/51a33fecea9b41d8e1034e93fdf9c030.mp4"
+                        "comment": "../../sound/2564902/idolcomment.mp3",
+                        "comments_my_1": "../../sound/2564902/my_1.mp3",
+                        "comments_my_2": "../../sound/2564902/my_2.mp3",
+                        "comments_my_3": "../../sound/2564902/my_3.mp3",
+                        "comments_my_4": "../../sound/2564902/my_4.mp3",
+                        "comments_my_max": "../../sound/2564902/my_max.mp3",
+                        "comments_work_1": "../../sound/2564902/work_1.mp3",
+                        "comments_work_2": "../../sound/2564902/work_2.mp3",
+                        "comments_work_3": "../../sound/2564902/work_3.mp3",
+                        "comments_work_4": "../../sound/2564902/work_4.mp3",
+                        "comments_work_max": "../../sound/2564902/work_max.mp3",
+                        "comments_work_love_up": "../../sound/2564902/work_love_up.mp3",
+                        "comments_live": "../../sound/2564902/live.mp3",
+                        "comments_love_max": "../../sound/2564902/love_max.mp3"
                     },
                     "event": null,
                     "release": "",
